init antd style

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start:scrm": "webpack serve --config webpackConfig/webpack.config.js --mode=development",
+    "start": "webpack serve --config webpackConfig/webpack.config.js --mode=development",
     "start:enterprise": "webpack serve --config webpackConfig/enterprise.webpack.config.js --mode=development",
     "build": "rm -rf dist/ && webpack --mode=production",
     "eslint": "eslint scrm/**"
@@ -26,12 +26,15 @@
     "@types/react-dom": "^17.0.9",
     "@typescript-eslint/eslint-plugin": "^4.30.0",
     "@typescript-eslint/parser": "^4.30.0",
+    "babel-plugin-import": "^1.13.3",
     "css-loader": "^6.2.0",
     "eslint": "^7.32.0",
     "eslint-config-import": "^0.13.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-react": "^7.25.1",
     "html-webpack-plugin": "^5.3.2",
+    "less": "^4.1.1",
+    "less-loader": "^10.0.1",
     "postcss": "^8.3.6",
     "postcss-loader": "^6.1.1",
     "sass": "^1.38.2",
