--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "private": true,
   "scripts": {
-    "start": "webpack serve --config webpackConfig/webpack.config.js --mode=development",
-    "start:enterprise": "webpack serve --config webpackConfig/enterprise.webpack.config.js --mode=development",
-    "build": "rm -rf dist/ && webpack --config webpackConfig/webpack.config.js --mode=production",
-    "eslint": "eslint scrm/**"
+    "start": "cross-env NODE_ENV=dev webpack serve --config webpackConfig/webpack.config.js --mode=development",
+    "start:enterprise": "cross-env NODE_ENV=dev webpack serve --config webpackConfig/enterprise.webpack.config.js --mode=development",
+    "build": "rm -rf dist/ && cross-env NODE_ENV=prod  webpack --config webpackConfig/webpack.config.js --mode=production",
+    "lint": "eslint 'common/**/*' 'config/**/*' 'scrm/**/*' --cache --fix"
   },
   "dependencies": {
     "antd": "^4.16.13",
+    "axios": "^0.21.1",
     "babel-loader": "^8.2.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -27,7 +29,9 @@
     "@typescript-eslint/eslint-plugin": "^4.30.0",
     "@typescript-eslint/parser": "^4.30.0",
     "babel-plugin-import": "^1.13.3",
+    "cross-env": "^7.0.3",
     "css-loader": "^6.2.0",
+    "dotenv": "^10.0.0",
     "eslint": "^7.32.0",
     "eslint-config-import": "^0.13.0",
     "eslint-plugin-promise": "^5.1.0",
@@ -41,6 +45,7 @@
     "sass-loader": "^12.1.0",
     "style-loader": "^3.2.1",
     "typescript": "^4.4.2",
+    "url-loader": "^4.1.1",
     "webpack-bundle-analyzer": "^4.4.2",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.0.0",
